@@ -1,4 +1,4 @@
-% @problema/private/calcular_df.m computes the gradient of f(z).
+% @problema/private/calcular_df.m computes the gradient of f(.).
 %
 % Copyright (c) 2010 Leonardo Martins, Universidade Estadual de Campinas
 %
@@ -28,23 +28,29 @@
 % THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 % (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 % THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-function df= calcular_df(obj,u)
+function df= calcular_df(obj,w)
   % list of thermal plants
   ut= get(obj.si,'ut');
   % system dimensions
   ni= get(obj.si,'ni');
+  np= get(obj.si,'np');
   nt= get(obj.si,'nt');
-  ti= get(obj.si,'ti');
   % unpack z variables
-  mz= obter_mz(obj,u);
+  z= desempacotar_z(obj, extrair_z(obj, w));
+  % memory allocation
+  dz= cell(np,1);
+  for l= 1:np
+    dz{l}= zeros(nt,ni);
+  end
   % compute partial derivatives
-  dz= zeros(nt,ni);
   for k= 1:nt
     cg= get(ut{k},'cg');
     for j= 1:ni
-      dz(k,j)= derivar(cg,1,mz(k,j),(ti(j)/3600)/730);
+      for l= 1:np
+        dz{l}(k,j)= derivar(cg, 1, z{l}(k,j));
+      end
     end
   end
   % fill in gradient elements
-  df= [zeros(obj.nx+obj.ny,1); reshape(dz,obj.nz,1)];
+  df= [zeros(obj.nx+obj.ny,1); empacotar_z(obj, z)];
 end
